fix position of our-work header and make our-work section contrast (white on black)

--- a/css/style.scss
+++ b/css/style.scss
@@ -81,7 +81,8 @@ p.lede {
 		font-family: $sans-stack;
 }
 legend,
-.our-approach p {
+.our-approach p,
+.project-info {
 	font-family: $serif-stack;
 }
 
@@ -727,6 +728,11 @@ img.logo {
 	}
 
 	.our-work {
+		h2 {
+			position: absolute;
+			z-index: 1000;
+			color: white;
+		}
 		padding-bottom: 0;
 		.hentry {
 			position: relative;
@@ -745,8 +751,8 @@ img.logo {
 			width: 100%;
 			height: 100%;
 			background-image: -webkit-gradient(
-			  linear, 33% center, 66% center, from(rgba(255,255,255,0)),
-			  to(rgba(255,255,255,.66))
+			  linear, 33% center, 66% center, from(rgba(0,0,0,0)),
+			  to(rgba(0,0,0,.5))
 			);
 		}
 		.project-info {
@@ -756,6 +762,7 @@ img.logo {
 			padding-left: 5%;
 			padding-right: 5%;
 			width: 33.333%;
+			color: white;
 		}
 		.image-changer {
 			@include rem-fallback(margin-top, $scale-0);
